# Mine-Sweeper

./: MakeFile  Makefile  Makefile.am  README.md  README.txt  autogen.sh  configure.ac  main.c
Mine-Sweeper 1.1/: Makefile.am  README.txt  autogen.sh  configure.ac
Mine-Sweeper 1.1/sfx/: boom.flac  break.flac
Mine-Sweeper 1.1/src/: main.c
MineSweeper 1.0/: README.txt
MineSweeper 1.0/src/: main.c  main.c~
src/: main.c
